# ftml

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: build.yaml
backend/: Cargo.toml  Makefile.toml
backend/.cargo/: config.toml
backend/src/: cache.rs  dynbackend.rs  errors.rs  lib.rs  remote.rs  utils.rs  wasm.rs
backend/src/utils/: async_cache.rs  mod.rs
component-utils/: Cargo.toml  Makefile.toml  build.rs
component-utils/doc/: katex-header.html
component-utils/src/: anchor_menu.css  anchor_menu.rs  block.css  block.rs  collapsible.css  collapsible.rs  divider.css  events.rs  icons.rs  js.rs  lib.rs  popover.rs  root.css  scrollbar.css  spinner.css  tables.css  tables.rs  text.css  text.rs  theming.rs  toasts.rs
components/: Cargo.toml  Makefile.toml  build.rs
components/.cargo/: config.toml
components/src/: callbacks.rs  config.rs  lib.rs
components/src/components/: comp.css  inputref.css  inputref.rs  mod.rs  notations.rs  paragraphs.rs  popup.css  problems.rs  sections.css  sections.rs  sidebar.css  sidebar.rs  slides.css  terms.rs  toc.rs
components/src/components/content/: documents.rs  domain.rs  mod.rs  notations.css  paragraphs.rs  symbols.rs
components/src/components/terms/: comp.rs  formals.rs  mod.rs  popover.rs  subterms.rs
components/src/utils/: block.css  block.rs  collapsible.css  collapsible.rs  mod.rs  theming.rs
core/: Cargo.toml  Makefile.toml  build.rs
core/.cargo/: config.toml
core/doc/: docs.html
core/src/: keys.rs  keys2.rs  lib.rs
core/src/domain/declarations/: mod.rs
core/src/extraction/: attributes.rs  mod.rs  nodes.rs  open.rs  rules.rs  state.rs
dom/: Cargo.toml  Makefile.toml  build.rs
dom/.cargo/: config.toml
dom/src/: clonable_views.rs  counters.rs  document.rs  extractor.rs  hasFtmlAttribute.js  lib.rs  markers.rs  mathml.rs  notations.rs  structure.rs  terms.rs  toc.rs  views.rs
dom/src/notations/: mod.rs  terms.rs
dom/src/utils/: actions.rs  css.rs  local_cache.rs  mod.rs
expressions/: Cargo.toml
expressions/.cargo/: config.toml
expressions/src/: arguments.rs  expr.rs  lib.rs
ftml5ever/: Cargo.toml  Makefile.toml
ftml5ever/.cargo/: config.toml
ftml5ever/src/: ever.rs  lib.rs  parser.rs
js-utils/: Cargo.toml  Makefile.toml
js-utils/.cargo/: config.toml
js-utils/src/: conversion.rs  lib.rs  split.rs
leptos/: Cargo.toml  Makefile.toml
leptos-react/: Cargo.toml  Makefile.toml
leptos-react/src/: react.ts
leptos/.cargo/: config.toml
leptos/src/: callbacks.rs  config.rs  lib.rs
leptos/src/components/: comp.css  content.css  inputref.rs  mod.rs  notations.rs  omdoc.rs  paragraphs.rs  sections.css  sections.rs  sidebar.rs  terms.rs  toc.css  toc.rs
leptos/src/components/content/: documents.rs  domain.rs  mod.rs  paragraphs.rs  symbols.rs
leptos/src/utils/: block.rs  collapsible.css  collapsible.rs  mod.rs  theming.rs
ontology/: Cargo.toml  Makefile.toml  README.md
ontology/.cargo/: config.toml
ontology/doc/: docs.html
ontology/src/: lib.rs
ontology/src/domain/: mod.rs  modules.rs
ontology/src/domain/declarations/: mod.rs  morphisms.rs  structures.rs  symbols.rs
ontology/src/expressions/: arguments.rs  expr.rs  mod.rs  om.rs
ontology/src/narrative/: documents.rs  mod.rs
ontology/src/narrative/elements/: mod.rs  notations.rs  paragraphs.rs  sections.rs  variables.rs
ontology/src/narrative/elements/problems/: feedback.rs  mod.rs  quizzes.rs  solutions.rs
ontology/src/terms/: arguments.rs  bank.rs  debug.rs  eq.rs  free.rs  helpers.rs  macros.rs  mod.rs  om.rs  opaque.rs  patterns.rs  records.rs  sequences.rs  simplify.rs  subst.rs  syn.rs_experiment  term.rs  termpaths.rs  termpaths2.rs  variables.rs
ontology/src/utils/: awaitable.rs  css.rs  css.rs_old  hexable.rs  mod.rs  regex.rs  shared_arc.rs  time.rs  tree.rs
parser/: Cargo.toml  Makefile.toml
parser/.cargo/: config.toml
parser/src/: keys.rs  lib.rs
parser/src/extraction/: attributes.rs  mod.rs  nodes.rs  open.rs  rules.rs_old  state.rs
tests/leptos/: Cargo.toml
tests/leptos/.cargo/: config.toml
tests/leptos/public/: all-csr.en.html  all.en.html  ftml.js  ftml_bg.wasm  metatheory.en.html  morphisms.en.html  para.en.html  paragraphs.en.html  problems.en.html  proof.en.html  sections.en.html  slides.en.html  structures.en.html  symbolsmodules.en.html  test.en.html  theory.html
tests/leptos/src/: app.rs  lib.rs  main.rs  test.html
tests/leptos/style/: main.scss
ulo/: Cargo.toml  README.md
ulo/.cargo/: config.toml
ulo/src/: lib.rs  ontologies.rs  sparql.rs
uris/: Cargo.toml  Makefile.toml  README.md
uris/.cargo/: config.toml
uris/benches/: interning_benchmarks.rs  uri_benchmarks.rs
uris/src/: archive.rs  base.rs  bincode_impl.rs  components.rs  doc_element.rs  document.rs  language.rs  lib.rs  metatheory.rs  module.rs  paths.rs  symbol.rs  traits.rs
uris/src/aux/: errors.rs  infix.rs  interned.rs  interning.rs  macros.rs  mod.rs  uninterned.rs
uris/src/uris/: archive.rs  base.rs  doc_element.rs  document.rs  module.rs  paths.rs  symbol.rs
uris/src/utils/: errors.rs  infix.rs  interned.rs  macros.rs  mod.rs
viewer/: Cargo.toml  Makefile.toml
viewer/.cargo/: config.toml
viewer/doc/: docs.html
viewer/src/: backend.rs  config.rs  getFtmlConfig.js  lib.rs
