[workspace]
members = [
    "uris",
    "ulo",
    "ontology",
    "parser",
    "backend",
    "ftml5ever",
    "js-utils",
    "dom",
    "components",
    "viewer",
    "leptos-react"
]
exclude = ["tests"]
resolver = "3"

[profile.release]
panic = "abort"
# debug = "full"
codegen-units = 1
overflow-checks = false
split-debuginfo = "packed"
strip = "symbols"
#strip = false
opt-level = 'z'
lto = true
incremental = true

[profile.dev]
strip = "none"
opt-level = 2
debug = true
split-debuginfo = "off"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
#codegen-units = 256
rpath = false

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[workspace.dependencies]
ftml-uris = { path = "uris" }
ulo = { path = "ulo" }
ftml-ontology = { path = "ontology" }
ftml-parser = { path = "parser" }
ftml-backend = { path = "backend" }
ftml5ever = { path = "ftml5ever" }
ftml-dom = { path = "dom" }
ftml-components = { path = "components" }
ftml-js-utils = { path = "js-utils" }

leptos-react = {path = "leptos-react"}

rustc_version = "0.4"

tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
rstest = { version = "0.26" }
criterion = { version = "0.7", features = ["tokio"] }
reqwest = { version = "0" }

server_fn = "0.8"
server_fn_macro_default = "0.8"
leptos_router = "0.8"
leptos = "0.8"
leptos_meta = "0.8"

icondata_ai = "0"
icondata_bi = "0"
icondata_bs = "0"

strumbra = "0.6"
serde = { version = "1" }
serde_with = "3"
miniserde = "0.1"
serde-lite = {git="https://github.com/Jazzpirate/serde-lite",branch="hashmaps",features=["derive"]}
wasm-bindgen = "^0.2.105"
web-sys = { version = "0.3", default-features = false }
url = { version = "2.5" }
rustc-hash = "2"
either = "1"
smallvec = { version = "2.0.0-alpha.11" }
triomphe = "0.1"
parking_lot = "0.12"
futures = "0.3"
dashmap = { version = "6" }
const_format = "0.2"
thiserror = "2"
arrayvec = "0.7"
document-features = "0.2"
strum = { version = "0.27", features = ["derive"] }
oxrdf = "0.3"
reqwasm = { version = "0.5" }
send_wrapper = "0.6.0"
html5ever = "0.35"
phf = "0.13"
lightningcss = { version = "1.0.0-alpha.68", default-features = false }
console_error_panic_hook = "0.1"
tracing-wasm = { version = "0.2" }
chrono = "0.4"


paste = "1"
thread_local = "1.1.8"
hashbrown = "0.16"
rand = "0.9"
tokio = { version = "1" }
tokio-uring = { version = "0.5" }
nix = { version = "0.30" }
ctor = { version = "0.6" }
async-broadcast = { version = "0.7" }
bincode = { version = "2", features = ["serde"] }
#postcard = { version = "1.1", features = ["use-std"] }
num-bigint = { version = "0.4" }
ordered-float = { version = "5" }
dyn-clone = { version = "1" }
ibig = "0.3"
either_of = "0.1"
tsify = { version = "0.5", features = ["js"] }
derive_more = "2"
base64 = "0.22"
enum_dispatch = "0.3"
tantivy = "0.25"
syntree = "0.18"
js-regexp = "0.2"
regex = "1.10"
gloo-storage = "0.3"
urlencoding = "2.1"
futures-util = { version = "0.3", default-features = false }
kanal = "0.1"
flume = { version = "0.11", features = ["async"] }
pollster = "0.4"
bytesize = "2"
deepsize = "0.2"
serde-wasm-bindgen = "0.6"
impl-tools = { version="0.11.4" }
dateparser = {git = "https://github.com/Jazzpirate/dateparser"}

openmath = "0.1"
#thaw = { version = "0.5.0-beta" }
#thaw = { path = "../thaw/thaw" }
thaw = { git = "https://github.com/thaw-ui/thaw" }
thaw_utils = { git = "https://github.com/thaw-ui/thaw" }
leptos-posthoc = { version = "0.2", git = "https://github.com/FlexiFormal/leptos-posthoc.git" }
#leptos-posthoc = { path = "../leptos-posthoc" }

proc-macro2 = "1"
quote = "1"
syn = "2"
proc-macro-crate = "3"
