[package]
name = "ftml-components"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
## Pure client-side rendering
csr = [
    "leptos/csr",
    "ftml-dom/csr",
    "thaw/csr",
    "dep:gloo-storage",
    "ftml-backend/wasm",
    "ftml-backend/cached",
]
## Client-side in compbination with ssr
hydrate = [
    "leptos/hydrate",
    "ftml-dom/hydrate",
    "thaw/hydrate",
    "dep:gloo-storage",
]
## Server-side rendering
ssr = ["leptos/ssr", "thaw/ssr", "ftml-dom/ssr"]
## generate typescript bindings
typescript = ["csr", "dep:tsify", "ftml-dom/typescript","ftml-ontology/typescript"]
## Adds javascript callbacks for some components
callbacks = ["typescript", "dep:leptos-react", "leptos-react/typescript"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-in-header",
    "doc/katex-header.html",
    "--html-in-header",
    "doc/docs.html",
]
# cargo +nightly doc --no-deps --all-features --release --open

[build-dependencies]
rustc_version = { workspace = true }

[dev-dependencies]
#tracing-subscriber = { workspace = true }
#rstest = { workspace = true }
#criterion = { workspace = true }

[dependencies]
document-features = { workspace = true }

ftml-dom = { workspace = true }
ftml-uris = { workspace = true,features=["js","serde-lite"] }
ftml-ontology = { workspace = true,features=["serde-lite"] }
ftml-parser = { workspace = true }
ftml-backend = { workspace = true,features=["serde-lite"] }
ftml-js-utils = { workspace = true,features=["serde-lite"] }

rustc-hash = { workspace = true }
leptos = { workspace = true }
leptos-posthoc = { workspace = true }
thaw = { workspace = true }
serde_json = { workspace = true }
serde-lite = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
send_wrapper = { workspace = true }
either = { workspace = true }
icondata_ai = { workspace = true }
icondata_bi = { workspace = true }
icondata_bs = { workspace = true }
smallvec = { workspace = true }
serde-wasm-bindgen = { workspace = true }
thaw_utils = { workspace = true }
wasm-bindgen = { workspace = true }

gloo-storage = { workspace = true, optional = true }

tsify = { workspace = true, optional = true }
leptos-react = { workspace = true, optional = true }
