[package]
name = "ftml-components"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
## use leptos nightly feature
nightly = ["leptos/nightly","ftml-dom/nightly","ftml-component-utils/nightly"]
## Pure client-side rendering
csr = [
    "leptos/csr",
    "ftml-component-utils/csr",
    "ftml-dom/csr",
    "dep:gloo-storage",
    "ftml-backend/wasm",
    "ftml-backend/cached",
    "dep:web-sys"
]
## Client-side in combination with ssr
hydrate = [
    "leptos/hydrate",
    "ftml-component-utils/hydrate",
    "ftml-dom/hydrate",
    "dep:gloo-storage",
    "dep:web-sys"
]
## Server-side rendering
ssr = ["leptos/ssr", "ftml-dom/ssr",
    "ftml-component-utils/ssr"]
## generate typescript bindings
typescript = ["csr", "dep:tsify", "ftml-dom/typescript","ftml-ontology/typescript"]
## Adds javascript callbacks for some components
callbacks = ["typescript", "dep:leptos-react", "leptos-react/typescript"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-in-header",
    "doc/katex-header.html",
    "--html-in-header",
    "doc/docs.html",
]
# cargo +nightly doc --no-deps --all-features --release --open

[build-dependencies]
rustc_version = { workspace = true }

[dev-dependencies]
#tracing-subscriber = { workspace = true }
#rstest = { workspace = true }
#criterion = { workspace = true }

[dependencies]
document-features = { workspace = true }

ftml-dom = { workspace = true }
ftml-uris = { workspace = true,features=["js","serde-lite"] }
ftml-ontology = { workspace = true,features=["serde-lite"] }
ftml-parser = { workspace = true }
ftml-backend = { workspace = true,features=["serde-lite"] }
ftml-js-utils = { workspace = true,features=["serde-lite"] }

rustc-hash = { workspace = true }
leptos = { workspace = true }
leptos-posthoc = { workspace = true }
serde_json = { workspace = true }
serde-lite = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
send_wrapper = { workspace = true }
either = { workspace = true }
smallvec = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
uuid = {workspace = true}

gloo-storage = { workspace = true, optional = true }

tsify = { workspace = true, optional = true }
leptos-react = { workspace = true, optional = true }
web-sys = {workspace = true,features=["Selection","Range","Node"],optional=true}

ftml-component-utils = {workspace = true}
