[package]
name = "ftml-ontology"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
## Should be used for wasm targets; uses js regexes instead of
## the regex crate
wasm = ["dep:js-regexp"]
## Adds [`Serialize`](serde::Serialize) and [`Deserialize`](serde::Deserialize)
## to all types in this crate.
serde = [
    "dep:serde",
    "ftml-uris/serde",
    "smallvec/serde",
    #"dep:postcard",
    "dep:bincode",
    "ordered-float/serde"
]
## Generates typescript exports for `wasm-pack`; [`Uri`](crate::Uri)s are all
## bound to `string`, but naming still allows to make intentions in APIs explicit.
typescript = [
    "serde",
    "wasm",
    "dep:wasm-bindgen",
    "dep:tsify",
    "ftml-uris/typescript",
    "dep:ftml-js-utils"
]
## Enables OpenMath (de)serialization for FTML expressions
openmath = ["dep:openmath", "ftml-uris/openmath"]
## Enables RDF support
rdf = ["ftml-uris/rdf", "dep:ulo", "dep:arrayvec"]
## Adds lightningcss-based CSS normalization for ftml classes
css_normalize = ["dep:lightningcss", "dep:tracing"]
## Adds deepsize implementations to everything
deepsize = ["dep:deepsize", "dep:bytesize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-in-header",
    "doc/katex-header.html",
    "--html-in-header",
    "doc/docs.html",
]
# cargo +nightly doc --no-deps --all-features --release --open

[build-dependencies]
rustc_version = { workspace = true }

[dev-dependencies]
#tracing-subscriber = { workspace = true }
#rstest = { workspace = true }
#criterion = { workspace = true }

[dependencies]
document-features = { workspace = true }

ftml-uris = { workspace = true }

paste = { workspace = true }
triomphe = { workspace = true }
either = { workspace = true }
either_of = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
phf = { workspace = true, features = ["macros"] }
ordered-float = { workspace = true }

#kanal = { workspace = true }
pollster = { workspace = true }
flume = { workspace = true }
# syntree = { workspace = true }

serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
#postcard = { workspace = true, optional = true }
bincode = { workspace = true, optional = true, features = ["derive"] }

ftml-js-utils = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }
js-regexp = { workspace = true, optional = true }

openmath = { workspace = true, optional = true }
ulo = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }
lightningcss = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
deepsize = { workspace = true, optional = true }
bytesize = { workspace = true, optional = true }
