[package]
name = "ftml-viewer"
version = "0.0.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
## Generates typescript bindings
typescript = ["tsify", "ftml-components/typescript", "ftml-components/callbacks"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-in-header",
    "doc/katex-header.html",
    "--html-in-header",
    "doc/docs.html",
]
# cargo +nightly doc --no-deps --all-features --release --open

[build-dependencies]
rustc_version = { workspace = true }

[dev-dependencies]
#tracing-subscriber = { workspace = true }
#rstest = { workspace = true }
#criterion = { workspace = true }

[dependencies]
document-features = { workspace = true }

ftml-components = { workspace = true, features = ["csr"] }
ftml-backend = { workspace = true, features = [
    "wasm",
    "cached",
    "server_fn",
    "deepsize",
    "serde-lite"
] }
ftml-js-utils = {workspace = true}
ftml-uris = { workspace = true, features = ["interned"] }
ftml-dom = { workspace = true, features = ["deepsize"] }
ftml-ontology = { workspace = true, features = ["deepsize"] }

serde_json = { workspace = true }
parking_lot = { workspace = true }
leptos = { workspace = true }
leptos-posthoc = { workspace = true }
tracing-wasm = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true}#, features = ["release_max_level_info"] }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
console_error_panic_hook = { workspace = true }
bytesize = { workspace = true }
dateparser = { workspace=true,features=["wasm"]}

tsify = { workspace = true, optional = true }
